Backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /keygenrator
            pathType: Prefix
            backend:
              service:
                name: keygenrator-service
                port:
                  number: 8080
          - path: /urlshortner
            pathType: Prefix
            backend:
              service:
                name: urlshortner-service
                port:
                  number: 8080
